one more fix with flex-wrap

--- a/lesson-nine-transform/css-transform/transform.css
+++ b/lesson-nine-transform/css-transform/transform.css
@@ -132,7 +132,7 @@ img {
 
 .bg-first-type,
 .bg-second-type {
-  width: 12em;
+  width: 12;
   height: 7.8em;
   border-radius: 10px;
   padding: 1em;
